--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "typescript": "^4.3.3"
   },
   "dependencies": {
-    "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/router-sdk": "^1.9.0",
-    "@uniswap/sdk-core": "^4.2.0",
-    "@uniswap/universal-router": "1.6.0",
-    "@uniswap/v2-sdk": "^4.3.0",
-    "@uniswap/v3-sdk": "^3.11.0",
+    "@atleta-chain/permit2-sdk": "^1.2.0",
+    "@atleta-chain/router-sdk": "^1.9.0",
+    "@atleta-chain/sdk-core": "^4.2.0",
+    "@atleta-chain/universal-router": "^1.6.2",
+    "@atleta-chain/v2-sdk": "^4.3.0",
+    "@atleta-chain/v3-sdk": "^3.11.3",
     "bignumber.js": "^9.0.2",
     "ethers": "^5.3.1"
   },
